@@ -63,7 +63,10 @@ public:
 
     QList<QWebFrame*> childFrames() const;
 
-    void suppressScrollbars(bool suppress);
+    Qt::ScrollBarPolicy verticalScrollBarPolicy() const;
+    void setVerticalScrollBarPolicy(Qt::ScrollBarPolicy);
+    Qt::ScrollBarPolicy horizontalScrollBarPolicy() const;
+    void setHorizontalScrollBarPolicy(Qt::ScrollBarPolicy);
 
     void render(QPainter *painter, const QRect &source);
 
