@@ -70,9 +70,9 @@ DumpRenderTree::DumpRenderTree()
     page = new WebPage(0);
     page->resize(maxViewWidth, maxViewHeight);
     frame = page->mainFrame();
-    frame->suppressScrollbars(true);
+    frame->setHorizontalScrollBarPolicy(Qt::ScrollBarAlwaysOff);
+    frame->setVerticalScrollBarPolicy(Qt::ScrollBarAlwaysOff);
 
-    
     m_controller = new LayoutTestController();
     QObject::connect(m_controller, SIGNAL(done()), this, SLOT(dump()), Qt::QueuedConnection);
     QObject::connect(this, SIGNAL(quit()), qApp, SLOT(quit()), Qt::QueuedConnection);
